# mqtt-modbus-sc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  manage.py
backend/api/: __init__.py  dashboard.py  urls.py  views.py
backend/common/: __init__.py  mongo.py  mqtt.py  settings.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/devices/: __init__.py  admin.py  models.py
backend/devices/management/: __init__.py
backend/devices/migrations/: 0001_initial.py  0002_runtime_status_fields.py
backend/templates/: dashboard.html
docs/mermaid/: architecture-overview.mmd  mqtt-command-flow.mmd
infra/certs/: README.md
infra/certs/ca/: ca.cnf
infra/certs/modbus/: modbus-client.conf  modbus-server.conf  server_ext.cnf
infra/certs/mqtt/: mosquitto.conf  server_ext.cnf
infra/mosquitto/: aclfile  mosquitto.conf
scripts/: plot_flows.py
services/: __init__.py
services/modbus/: __init__.py
services/modbus/client/: __init__.py  config.py  core.py
services/modbus/server/: __init__.py  config.py  core.py
services/mqtt/: __init__.py
services/mqtt/client/: __init__.py  config.py  core.py
services/mqtt/ingestor/: __init__.py  config.py  core.py
shared/: __init__.py  assets.py  coincap.py  log.py  modbus.py  mqtt.py  settings.py  tls.py  utils.py
tests/: conftest.py  test_api_django.py  test_modbus_client.py  test_modbus_server.py  test_mqtt_client.py  test_mqtt_ingestor.py
(+2 files in other folders)
