[project]
name = "easycon-backend-assignment"
version = "0.1.0"
description = "EASYCON backend assignment skeleton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Django==6.0.5",
  "paho-mqtt==2.1.0",
  "pymongo==4.17.0",
  "pymodbus==3.13.0",
  "psycopg[binary,pool]==3.3.4",
  "pydantic-settings==2.14.1",
  "python-dotenv==1.2.2",
  "requests==2.34.0",
  "pydantic==2.13.4",
  "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "ruff==0.15.12",
]

plot = [
  "matplotlib>=3.10.9",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "backend.config.settings"
django_find_project = false
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
